# churn

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.dvc/: config
churn_project/: __init__.py  exception.py  logger.py
churn_project/modeling/: dataloader.py  enrich.py
data/interim/: telco_churn_enriched.csv.dvc
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/: analise_exploratoria.ipynb
